@@ -1,0 +1,10 @@
+Title: LDAP: Default configuration of attributes is reflected within WATO now
+Level: 1
+Component: wato
+Class: fix
+State: unknown
+Version: 1.2.5i1
+Date: 1387271448
+Targetversion: future
+
+
