@@ -759,7 +759,7 @@ register_configvar(group,
                 attrencode = True,
             )),
         ],
-        optional_keys = ['scope', 'filter', 'member'],
+        optional_keys = ['filter', 'member'],
     ),
     domain = "multisite",
     in_global_settings = False,
